# robo_gym

./: .gitignore  CLAUDE.md  LICENSE  README.md  eval.py  pyproject.toml  train.py
config/: config.yaml
config/eval/: full.yaml  quick.yaml
config/experiment/: high_reward.yaml  micro_junction.yaml  ppo_example.yaml
config/maze/: 2x2_turn_challenge.yaml  easy_corridor.yaml  easy_loop.yaml  easy_loop_reversed.yaml  easy_maze.yaml  generated_6x6.yaml  micro_junction.yaml  static_6x6.yaml
config/model/: ppo.yaml
config/reward/: explore_only.yaml
config/robot/: basic_v1.yaml
config/training/: default.yaml
config/wrappers/: frame_stack.yaml  frame_stack_16_vw.yaml  frame_stack_normalised.yaml  minimal.yaml  rnn.yaml
examples/: pid_controlled_robot.py
mazes/: 2x2_turn_challenge.json  easy_corridor.json  easy_loop.json  easy_loop_reversed.json  easy_maze.json  maze_10x10_dfs_seed123.maze.json  maze_6x6_dfs_seed42.maze.json  maze_6x6_prims_seed7.maze.json  maze_8x8_dfs_seed42.maze.json  maze_8x8_prims_seed7.maze.json
robo_gym/: __init__.py
robo_gym/env/: __init__.py  maze_env.py  realtime_wrapper.py  render_wrapper.py  reward.py  substep_wrapper.py
robo_gym/maze/: __init__.py  cell.py  generator.py  maze.py  micro_generator.py  renderer.py  right_hand.py  serializer.py
robo_gym/sim_core/: __init__.py  collision.py  (+6 more)
runs/: .gitignore
tests/: test_deploy.py  test_generator.py  test_kinematics.py  test_maze.py  test_maze_env.py  test_maze_world.py  test_maze_world_ray_cast.py  test_micro_generator.py  test_physics.py  test_renderer.py  test_reward_components.py  test_right_hand_path.py  test_right_hand_reward.py  test_sensor.py  test_serializer.py  test_ultrasonic.py  test_wrappers.py
training_suite/: README.md  __init__.py  callbacks.py  checkpoint.py  config_schema.py  factory.py  metrics.py  trainer.py
(+12 files in other folders)
